<?xml version="1.0" encoding="utf-8"?>
<resources>
    
  	<!--  Enter Details Screen -->
    <string name="app_name">CD World</string>
    <string name="checkout">Receipt</string>
    <string name="quantity">Quantity: </string>
    <string name="amount">0</string>
    <string name="purchase">Purchase Items</string>
    <string name="thankyou">Thank you for shopping at CD WORLD!!</string>
    <string name="preVat">Pre Vat:</string>
    <string name="vat">Vat @21%:</string>
    <string name="totalPrice">Total Price:</string>
    <string name="continueCheckout">Continue To Checkout</string>
    <string name="list_screen_name">Albums</string>
    <string name="album_info_name">Album Information</string>
    <string name="contentsOfCart">Checkout Items</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>    
    <string name="details_header">Please Enter Your Details Below</string>
	<string name="jobTitle">Job Title:</string>
	<string name="name">Name:</string>
	<string name="gender">Gender:</string>
	<string name="ageTitle">Age:</string>
	<string name="spendingMoneyTitle">Spending Money:</string>
	<string name="emailAddrTitle">Email Address:</string>
	<string name="continueTitle">Continue</string>
	<string name="genderMale">Male</string>
	<string name="genderFemale">Female</string>
	<string name="hint">click to enter details</string>
	<string name="desc">Description</string>
	<string name="_return">Return To Enter Details Screen</string>
	<string name="confirmationInfo">A receipt has been emailed to you.</string>
	
	<color name="green_color">#8fd44a</color>
	
	<string-array name="jobs_array">
        <item>Software Engineer</item>
        <item>Lecturer</item>
        <item>Scientist</item>
        <item>Builder</item>
        <item>Shop Assistant</item>
        <item>Barman</item>
        <item>Astrounaut</item>
        <item>Architect</item>
    </string-array>
    
	<string-array name="ages_array">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
    </string-array>
     
</resources>
