<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shoppinglist.EnterDetails" >
    
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/contentsOfCart"
        android:textSize="20sp" 
        android:textStyle="bold"/>
    
    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/header"
        android:textSize="12sp" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/artist"
        android:layout_toEndOf="@id/artist"
        android:layout_below="@id/header"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/album"
        android:layout_toEndOf="@id/album"
        android:layout_below="@id/header"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/preVat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/album"
        android:layout_toEndOf="@id/album"
        android:layout_below="@id/price"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/preVatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/preVat"
        android:layout_toStartOf="@id/preVat"
        android:layout_below="@id/price"
        android:textSize="12sp"
        android:text="@string/preVat" 
        android:textStyle="bold"/>
    
    <TextView
        android:id="@+id/vat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/album"
        android:layout_toEndOf="@id/album"
        android:layout_below="@id/preVat"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/vatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/preVat"
        android:layout_toStartOf="@id/preVat"
        android:layout_below="@id/preVat"
        android:textSize="12sp"
        android:text="@string/vat" 
        android:textStyle="bold"/>
    
    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/album"
        android:layout_toEndOf="@id/album"
        android:layout_below="@id/vatText"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/totalPrice"
        android:layout_toStartOf="@id/totalPrice"
        android:layout_below="@id/vatText"
        android:textSize="12sp"
        android:text="@string/totalPrice" 
        android:textStyle="bold"/>
    
</RelativeLayout>

